src/components/Navbar/Navbar.scss
@import "../variables.scss";

.navbar-container {
  position: fixed;
  z-index: $navbar-z-index;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
  height: 50px;
}

.navbar-logo {
  max-height: 50px;
}

.navbar-background {
  background-color: white;
  position: fixed;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  height: 50px;
}

.navbar-menu {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 100%;

  .navbar-menu-icon {
    position: relative;
    width: 50px;
    height: 100%;
  }
  
  .icon {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 10px 0;
    cursor: pointer;
    color: $primary-color;
    transition: 0.5s;

    &.show {
      visibility: visible;
      opacity: 1;
    }

    &.hide {
      visibility: hidden;
      opacity: 0;
      transform: rotate(-180deg) scale(0.5);
    }
  }

  ul {
    position: fixed;
    z-index: -2;
    top: 25px;
    left: 0;
    opacity: 0;
    visibility: hidden;
    transition: 1s;

    a {
      pointer-events: none;
    }

    &.active {
      top: 50px;
      visibility: visible;
      opacity: 1;

      a {
        pointer-events: auto;
      }
    }
  }

  li {
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-top: 1px solid $primary-color;
    width: 100vw;
    height: 50px;

    &:last-child {
      border-bottom: 1px solid $primary-color;
    }

    a {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 100%;
      height: 100%;
      text-decoration: none;
      color: $primary-color;
    }
  }
}

@media only screen and (min-width: $mobile-width) {
  .navbar-container {
    padding: 0 10%;
  }

  .navbar-menu {
    .icon {
      display: none;
    }
    
    ul {
      position: initial;
      display: flex;
    }

    li {
      width: 150px;
      border: none;

      &:last-child {
        border-bottom: none;
      }

      &:hover {
        border-bottom: 2px solid $primary-color;
      }
    }
  }
}

